--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,9 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.text-outline {
+  -webkit-text-stroke: 1px black;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000;
+}
